--- a/style.css
+++ b/style.css
@@ -10,10 +10,9 @@ body {
 }
 .box {
     text-align: center;
-    background-color: #F3F3ED;
+    background-color: #bdb4b4;
     padding: 2rem;
     border-radius: 1rem;
-    box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
 }
 
 h1 {
@@ -39,7 +38,6 @@ h1 {
     border-radius: 1rem;
     background-color: #e0e0e0;
     font-size: 3rem;
-    box-shadow: inset 0 0 1rem rgba(0, 0, 0, 0.2);
 }
 
 button {
