--- a/style.css
+++ b/style.css
@@ -10,9 +10,10 @@ body {
 }
 .box {
     text-align: center;
-    background-color: #bdb4b4;
+    background-color: #928f81;
     padding: 2rem;
     border-radius: 1rem;
+    border: 0.2rem solid #333;
 }
 
 h1 {
